[package]
name = "bevy_frustum_culling"
version = "0.1.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"

[dependencies]
#bevy = { version = "0.5", default-features = false, features = ["render"] }
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "997eae6", default-features = false, features = ["render"] }
#bevy_mod_bounding = "0.1"
bevy_mod_bounding = { git = "https://github.com/Veykril/bevy_mod_bounding.git", rev = "d6b23e6" }

[dev-dependencies]
#bevy = { version = "0.5", default-features = false, features = [
#    "bevy_wgpu",
#    "bevy_winit",
#    "bevy_gltf",
#    "x11",
#] }

bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "997eae6", default-features = false, features = [
    "bevy_wgpu",
    "bevy_winit",
    "bevy_gltf",
    "x11",
] }
